# MACPLAS

./: .clang-format  .gitignore  CMakeLists.txt  README.md  indent.sh  macplasConfig.cmake.in
applications/: clean-vtk.py
applications/Bending-test/: CMakeLists.txt  create-mesh.sh  dislocation.prm  helper.sh  main.cc  mesh-3d.geo  plot-probes-compare.gnu  plot-probes-minmax.gnu  problem.prm  run-T-sweep.sh  stress.prm
applications/Cooling/: CMakeLists.txt  README.md  main.cc  plot-probes-compare.gnu  plot-probes-minmax.gnu  plot-probes.gnu  run-simple.sh
applications/Crystal-growth/: CMakeLists.txt  README.md  create-mesh.sh  helper.sh  main.cc  mesh-2d.geo  mesh-2d.msh  mesh.in  parametric-setup.py  plot-probes-minmax.gnu  run-transient-temperature-dislocation.sh  run-transient-temperature.sh
applications/Inductive-heating/: CMakeLists.txt  README.md  clean-prm.sh  clean-results.sh  dislocation.prm  helper.sh  main.cc  mesh-2d.geo  mesh-2d.msh  mesh-3d.geo  plot-probes-minmax.gnu  plot-steady-temperature.gnu  plot-temperature-current.gnu  plot-transient-temperature-time.gnu  plot-transient-temperature.gnu  problem.prm  process-probes.py  qEM-2d.txt  qEM-3d.vtu  run-currents.sh  run-dislocations.sh  run-steady-temperature.sh  run-transient-temperature-dislocation.sh  run-transient-temperature.sh  stress.prm  temperature.prm
applications/Thermal-stress/: CMakeLists.txt  README.md  create-mesh.sh  main.cc  mesh-2d.geo  mesh-3d.geo  mesh-3d.msh
doc/: doxygen.conf
include/: advection_solver.h  dislocation_solver.h  stress_solver.h  temperature_solver.h  utilities.h
tests/1-hollow-sphere/: CMakeLists.txt  main.cc
tests/1-stress/: CMakeLists.txt  README.md  main.cc  plot-x.plt  run.sh
tests/1b-stress/: CMakeLists.txt  README.md  main.cc  plot-x.plt  run.sh  stress.prm
tests/2-temperature/: CMakeLists.txt  README.md  main.cc  plot-probes.plt  run.sh  temperature.prm
tests/3-interpolation/: CMakeLists.txt  README.md  main.cc  q-2d.txt  q.vtk
tests/4-dislocation/: CMakeLists.txt  README.md  main.cc  plot-probes-calibration.gnu  plot-probes-simple.gnu  run-calibration.sh  run-schemes.sh  run-simple.sh
tests/4-dislocation/data-ref/: calibration_1173.tsv  calibration_1373.tsv  calibration_1573.tsv  dislocation.prm  info.txt  problem.prm  stress.prm
tests/5-gradient/: CMakeLists.txt  README.md  main.cc
(+19 files in other folders)
