SET(TARGET "macplas")

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.8)

PROJECT(${TARGET} LANGUAGES CXX)

ADD_LIBRARY(${TARGET} INTERFACE)
TARGET_INCLUDE_DIRECTORIES(${TARGET} INTERFACE ${PROJECT_SOURCE_DIR}/include)

INSTALL(TARGETS ${TARGET})

INCLUDE(CMakePackageConfigHelpers)

CONFIGURE_PACKAGE_CONFIG_FILE(
    "${PROJECT_SOURCE_DIR}/${TARGET}Config.cmake.in"
    "${PROJECT_SOURCE_DIR}/${TARGET}Config.cmake"
    INSTALL_DESTINATION include/${TARGET}/cmake
)

INSTALL(FILES "${PROJECT_BINARY_DIR}/${TARGET}Config.cmake"
        DESTINATION include/${TARGET}/cmake)
INSTALL(DIRECTORY ${PROJECT_SOURCE_DIR}/include/ DESTINATION include/${TARGET})

# documentation

FIND_PACKAGE(Doxygen)
if (DOXYGEN_FOUND)
  add_custom_target(doc
    ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/doc/doxygen.conf
    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/doc)
endif()
